--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <script src="js/blog.js"></script>
 <body >
 <p class="header">
-    <a class="login" href="html/login.html">登录***</a>
-    <a class="huanfu" href="#">换肤****</a>
+    <a class="login" href="html/login.html">登录</a>
+    <a class="huanfu" href="#">换肤</a>
 </p>
 <div class="huanfu_box">
     <img src="images/close.svg" class='close'/>
@@ -45,8 +45,8 @@
     </div>
     <div class="head_right">
         <ul id="nav_list" class="nav">
-            <li><a class="a" href="index.html" target="_blank">首页ing</a></li>
-            <li><a href="html/world.html" target="_blank">我的世界ing</a>
+            <li><a class="a" href="index.html" target="_blank">首页</a></li>
+            <li><a href="html/world.html" target="_blank">我的世界</a>
                 <div class="nav_div">
                     <ol>
                         <li><a href="#" target="_blank">我的文档</a></li>
